fix: overflow in css

--- a/src/views/style/style.scss
+++ b/src/views/style/style.scss
@@ -1,6 +1,8 @@
+html , body {
+  overflow-x: hidden;
+}
 body {
   background-color: rgb(245, 240, 240);
-  overflow-x: hidden;
   user-select: none;
 }
 
